2015-01-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (new_alert): Get all report formats that user has
	permission to access.

2015-01-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl: Make sure that all forms have enctype set to
	"multipart/form-data", for consistency, and also because otherwise the
	page handlers get the parameters URL-escaped (at least with Firefox
	34.0.5).  This was preventing saving of report formats with spaces in
	their names, for example.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0+beta6.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 6.0+beta5 release.

	* CHANGES: Updated.

2015-01-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add option to apply bulk actions to all filtered items.

	* src/gsad_omp.c (process_bulk_omp): Add cases for applying to all
	filtered items. Use original filter when exporting page contents.

	* src/gsad.c (init_validator): Make "bulk_select" alias of "number".

	* src/html/classic/omp.xsl (list-window): Add new option to bulk select
	all filtered items.
	(report, task, html-tasks-table, lsc_credential, agent, alert, filter)
	(tag, target, config, schedule, scanner, slave, info/cpe, info/cve)
	(info/nvt, info/ovaldef, info/cert_bund_adv, info/dfn_cert_adv)
	(info/allinfo, html-cpe-table, html-cve-table, html-nvt-table)
	(html-ovaldef-table, html-cert_bund_adv-table, html-dfn_cert_adv-table)
	(html-allinfo-table, note, override, group, permission, port_list)
	(report_format, html-reports-table, html-results-table, result, role)
	(user): Show checkboxes only if the parameter bulk_select equals 1.
	(process_bulk): Create hidden bulk_selected inputs from selection XML
	elements instead of copying parameters.

	* src/html/classic/po/de.xml: Add text for "all filtered" bulk actions.
